force-app/main/default/objects/Patient_Safety_Risk__c/Patient_Safety_Risk__c.object-meta.xml
<CustomObject>
    <label>Patient Safety Risk</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Risk Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Safety Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>