force-app/main/default/objects/Patient_Safety_Risk__c/fields/Seed_Source__c.field-meta.xml
<CustomField>
    <fullName>Seed_Source__c</fullName>
    <label>Seed Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step2_TopSymptoms</fullName>
            </value>
            <value>
                <fullName>Step3_PriorDiagnosis</fullName>
            </value>
            <value>
                <fullName>Step6_PsychosisMania</fullName>
            </value>
            <value>
                <fullName>Step6_MedicalRedFlags</fullName>
            </value>
            <value>
                <fullName>Step7_FamilyHistory</fullName>
            </value>
            <value>
                <fullName>Step8_PsychologicalStressors</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Migration/Import</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>